@@ -8,7 +8,7 @@ Fit: "FitExample"
 %   MCstatThreshold: 0.05
   DebugLevel: 1
 %   ResultsFolder: mynewresults
-  
+  SystControlPlots: true
 
 Region: "SR_1"
 %   Type: SIGNAL
